# Security-Agent-For-Project-Programs-Security-Gateway

./: README.md  codesummary.json
.github/workflows/: codeql.yml
acrs/: .gitignore  README.md  SOFTWARE_TECHNICAL_SPECIFICATION.md  master_run.sh  pyproject.toml
acrs/.snsx/: config.json  run
acrs/ai_models/: features.py  model.py  train.py
acrs/analysis/binary_analysis/: engine.py
acrs/analysis/language_detection/: engine.py
acrs/analysis/security_audit/: engine.py
acrs/analysis/static_analysis/: engine.py
acrs/analysis/symbolic_execution/: engine.py
acrs/analysis/web_analysis/: engine.py
acrs/api/: fallback_server.py  main.py
acrs/core/: cli.py  config.py  pipeline.py  remediation.py  reporting.py  schemas.py
acrs/dashboard/backend/: README.md
acrs/dashboard/fallback/: index.html
acrs/dashboard/frontend/: index.html  package-lock.json  package.json
acrs/dashboard/frontend/src/: App.tsx  styles.css
acrs/docs/: ARCHITECTURE.md  GITHUB_INSTALL_MANUAL.md  INSTALL_AND_USAGE.md
acrs/exploit_planner/: rl_agent.py
acrs/fuzzing/: agent.py  mutators.py
acrs/knowledge_graph/: graph.py
acrs/reports/5f142495-9020-4aaf-b4ef-6411e9eb4c0d/: report.json  report.md
acrs/reports/ca6341cc-5cd8-477e-9a01-a8087c6945b0/: report.json  report.md
acrs/sandbox/: runner.py
acrs/snsx_crs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
